fix colors on safari

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body {
 
 button {
   font-family: inherit;
+  color: black;
 }
 
 button:disabled {
